gio-nam-website/src/components/Pages/AboutPage/AboutPage.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap');

.gio-nam-font {
    font-family: 'Noto Serif', serif;
}

.aboutpage-container {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
}

.aboutpage-hero-banner {
    height: 100vh;
    
    /* Flexbox stuff */
    /* display: flex;
    justify-content: center;
    align-items: center; */
    
    /* Text styles */
    /* text-align: center; */
    color: white;    

    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    position: relative;
    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url("../../../assets/gio-nam-hero-banner.png");
    /* background-attachment: fixed; */
    background-color: black;
}

.about-us-container {
    width: 100%;
    min-height: 50vh;
    height: fit-content;
    /* display: flex; */
    align-items: center;
    justify-content: center;

    background:rgba(255, 255, 255, 0.3);

    /* padding-top: 50px;  lol i dont know about px or what unit to use but this is fine for now */
    padding-right: 30px;
    padding-bottom: 50px;
    padding-left: 30px;

}

.about-us-container h1 {
    font-size: 40px;

}






.welcome-text {
    text-align: center;
    margin-bottom: 20px;
    font-size: 17px;
}





.aboutpage-hero-banner h1 {
    /* Text styles */
    font-size: 5vw;
}
.aboutpage-hero-banner h2 {
    /* Text styles */
    font-size: 2.5vw;
    margin-top: -25px;
}
.aboutpage-hero-banner h3 {
    /* Text styles */
    font-size: 1.5vw;
}

